--- a/index.html
+++ b/index.html
@@ -61,10 +61,10 @@
                     <div class="col-xs-12 col-sm-8">
                         <h2 style="margin-bottom: 24px;">Zhouhan Lin (林洲汉)</h2>
                         <div>
-                            <span style="font-weight: 500; font-size: 24px;">Assistant Professor</span>
+                            <span style="font-weight: 500; font-size: 24px;">Associate Professor</span>
                         </div>
                         <div>
-                            <span style="font-weight: 500;"><a href="https://jhc.sjtu.edu.cn/">John Hopcroft Center of Computer Science</a></span>
+                            <span style="font-weight: 500;">Deputy Director of <a href="https://jhc.sjtu.edu.cn/">John Hopcroft Center of Computer Science (JHC)</a></span>
                         </div>
                         <div>
                             <span style="font-weight: 500;"><a href="https://en.sjtu.edu.cn/">Shanghai Jiao Tong University</a></span>
@@ -116,10 +116,10 @@
                     Bio
                 </h3>
                 <p>
-                    I am an assistant professor at the 
+                    I am an associate professor at the 
                     <a href="https://jhc.sjtu.edu.cn/">John Hopcroft Center of Computer Science</a> 
                     at <a href="https://en.sjtu.edu.cn/">Shanghai Jiao Tong University (SJTU)</a>, 
-                    and I am leading the <a href="https://github.com/LUMIA-Group">LUMIA group</a>.
+                    and I am leading the <a href="https://github.com/LUMIA-Group">Language Understanding and Machine Intelligence Algorithms (LUMIA) group</a>.
                     Before joining SJTU, I was a visiting scientist at <a href="https://ai.facebook.com/">Facebook AI Research (FAIR)</a> in Menlo Park, CA, 
                     working with <a href="https://michaelauli.github.io/">Michael Auli</a>. 
                     I received my Ph.D. in Computer Science from the <a href="https://mila.quebec/en/">Mila lab</a> 
@@ -136,9 +136,9 @@
                     <a href="http://en.hit.edu.cn/">Harbin Institute of Technology</a>. For more information, you can find my CV <a href="assets/CV_Zhouhan_Lin.pdf">here</a>. 
                 </p>
                 <p>
-                    Currently, I am actively looking for highly motivated undergrads, interns, and prospective Master's (2025) or Ph.D. (2025) students to work with me. 
-                    Unfortunately, I have no more Ph.D. or Master's positions available for year 2024. 
-                    If you are interested in my research topics, please email me.
+                    I am actively looking for highly motivated undergrads, interns, and <span style="font-weight: 500;">prospective Master's (2025, 2026) or Ph.D. (2026) students</span> to work with me. 
+                    If you are interested in my research topics, please kindly drop me an email, preferably the @sjtu.edu.cn address.
+                    <span style="font-weight: 500;">Unfortunately, I have no more Ph.D. positions available for the year 2025.</span>
                 </p>
 
             </section>
@@ -180,8 +180,14 @@
                     News
                 </h3>
                 <ul class="row">
-                    <li> Sep 2023: <a href="https://openreview.net/pdf?id=t2hEZadBBk">One paper</a> got accepted at NeurIPS 2023! </li>
-                    <li> May 2023: Two papers (<a href="https://aclanthology.org/2023.acl-long.281/">[1]</a><a href="https://aclanthology.org/2023.findings-acl.570/">[2]</a>) are accepted at ACL 2023! </li>
+                    <li> Sep. 2024: Our human-readable LLM fingerprint (<a href="https://arxiv.org/abs/2312.04828">[1]</a>) and Cluster-wise Graph Transformer <a href="https://openreview.net/pdf?id=3j2nasmKkP">[2]</a>) got accepted at NeurIPS 2024, with [2] being spotlight! </li>
+                    <li> Sep. 2024: Four papers (<a href="https://openreview.net/pdf?id=KpR53ZqtQ6">[1]</a><a href="https://openreview.net/pdf?id=T7fzvcq7Mf">[2]</a><a href="https://openreview.net/pdf?id=uJB6HtUAHX">[3]</a><a href="https://openreview.net/pdf?id=2shnXVWH6c">[4]</a>) are accepted
+                         at EMNLP 2024! </li>
+                    <li> Jan. 2024: <a href="https://openreview.net/forum?id=hv3SklibkL">One paper</a> got accepted at ICLR 2024! </li>
+                    <li> Jan. 2024: Our pretrained geoscience LLMs are fully released! Papers, codes and checkpoints are available! The 30B model, named <a href="https://arxiv.org/pdf/2401.00434">GeoGalactica</a> (<a href="https://github.com/geobrain-ai/geogalactica">code&checkpoints</a>), 
+                         is based on Galactica, and the 7B model, named <a href="https://dl.acm.org/doi/abs/10.1145/3616855.3635772">K2</a> (<a href="https://github.com/davendw49/k2">code&checkpoints</a>),  is based on LLaMA. </li>
+                    <li> Sep. 2023: <a href="https://openreview.net/pdf?id=t2hEZadBBk">One paper</a> got accepted at NeurIPS 2023! </li>
+                    <li> May. 2023: Two papers (<a href="https://aclanthology.org/2023.acl-long.281/">[1]</a><a href="https://aclanthology.org/2023.findings-acl.570/">[2]</a>) are accepted at ACL 2023! </li>
                     <li> Mar. 2023: <a href="https://scholar.google.com/citations?user=C-TqDNsAAAAJ">Yunchong Song</a> has got the ICLR Travel Award, congratuations! </li>
                     <li> Feb. 2023: Two papers (<a href="https://arxiv.org/abs/2302.09509">[1]</a><a href="https://arxiv.org/abs/2304.05361">[2]</a>) are accepted at ICASSP 2023! </li>
                     <li> Jan. 2023: <a href="https://openreview.net/forum?id=wKPmPBHSnT6">One paper</a> is accepted at ICLR 2023! </li>
