--- a/index.html
+++ b/index.html
@@ -148,17 +148,15 @@
                     Research
                 </h3>
                 <p>
-                    My core research interest is <span style="font-weight: 500;">to explore and develop machine intelligence capable of acquiring, forming, reasoning, and interacting with abstract concepts</span> from large amounts of data. Almost all
-                    of my research efforts are centered around this goal, touching on a diverse range of topics such as attention mechanisms, language modeling, dialog systems, automated summarization, grammar induction, graph neural networks, code generation,
-                    etc. A list of topics that I am interested in at the moment are:
+                    My core research interest is <span style="font-weight: 500;">to explore and develop machine intelligence capable of acquiring, forming, reasoning, and interacting with abstract concepts</span> from large amounts of data，
+                    especially through self-supervised learning. 
+                    Almost all of my research efforts are centered around this goal, touching on a diverse range of topics such as attention mechanisms, language modeling, dialog systems, automated summarization, grammar induction, 
+                    graph neural networks, code generation, etc. A list of topics that I am interested in at the moment are:
                 </p>
                 <ul class="row">
                     <li> Methods that could suppress hallucination in LLMs, such as retrieval-based methods, external memory, etc. </li>
-                    <li> Long sequence modeling, such as efficient attention mechanisms, learning multi-scale representations, etc.</li>
-                    <li> Modeling highly grammatical and structured sequences, such as SQL and code. </li>
-                    <li> Graph representation learning, especially those that include evolving graph structures.</li>
-                    <li> Self-supervised learning, especially in a cross-modal setting.</li>
-                    <li> Diet dataset for LLMs. </li>
+                    <li> Long sequence modeling, such as learning multi-scale representations, efficient attention mechanisms, etc.</li>
+                    <li> Graph representation learning, especially evolving graph structures.</li>
                     <!-- 在这里新建一条新的news，格式如下 -->
                     <!-- <li>新内容</li> -->
                 </ul>
