--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
                 <ul class="row">
                     <li> Methods that could suppress hallucination in LLMs, such as retrieval-based methods, external memory, etc. </li>
                     <li> Long sequence modeling, such as learning multi-scale representations, efficient attention mechanisms, etc.</li>
-                    <li> Graph representation learning, especially evolving graph structures.</li>
+                    <li> Graph representation learning, especially those with evolving graph structures.</li>
                     <!-- 在这里新建一条新的news，格式如下 -->
                     <!-- <li>新内容</li> -->
                 </ul>
@@ -178,6 +178,7 @@
                     News
                 </h3>
                 <ul class="row">
+                    <li> Dec. 2024: I gave two talks on <a href="http://lmg.cipsc.org.cn/conference/cips-lmg2024/index.html">CIPS-LMG 2024</a>. The slides can be found <a href="assets/HuRef LMG演讲.pdf">here</a> (our NeurIPS work on human-readable fingerprint) and <a href="assets/LMG讲习班-1.5h.pdf">here</a> (the efficient LLM tutorial). </li>
                     <li> Sep. 2024: Our human-readable LLM fingerprint (<a href="https://arxiv.org/abs/2312.04828">[1]</a>) and Cluster-wise Graph Transformer <a href="https://openreview.net/pdf?id=3j2nasmKkP">[2]</a>) got accepted at NeurIPS 2024, with [2] being spotlight! </li>
                     <li> Sep. 2024: Four papers (<a href="https://openreview.net/pdf?id=KpR53ZqtQ6">[1]</a><a href="https://openreview.net/pdf?id=T7fzvcq7Mf">[2]</a><a href="https://openreview.net/pdf?id=uJB6HtUAHX">[3]</a><a href="https://openreview.net/pdf?id=2shnXVWH6c">[4]</a>) are accepted
                          at EMNLP 2024! </li>
