--- a/index.html
+++ b/index.html
@@ -136,9 +136,9 @@
                     <a href="http://en.hit.edu.cn/">Harbin Institute of Technology</a>. For more information, you can find my CV <a href="assets/CV_Zhouhan_Lin.pdf">here</a>. 
                 </p>
                 <p>
-                    I am actively looking for highly motivated undergrads, interns, and <span style="font-weight: 500;">prospective Master's (2025, 2026) or Ph.D. (2026) students</span> to work with me. 
+                    I am actively looking for highly motivated undergrads, interns, and <span style="font-weight: 500;">prospective Master's (2027) or Ph.D. (2027) students</span> to work with me. 
                     If you are interested in my research topics, please kindly drop me an email, preferably the @sjtu.edu.cn address.
-                    <span style="font-weight: 500;">Unfortunately, I have no more Ph.D. positions available for the year 2025.</span>
+                    <span style="font-weight: 500;">Unfortunately, I have no more Ph.D. positions available for the year 2026.</span>
                 </p>
 
             </section>
@@ -154,9 +154,9 @@
                     graph neural networks, code generation, etc. A list of topics that I am interested in at the moment are:
                 </p>
                 <ul class="row">
-                    <li> Methods that could suppress hallucination in LLMs, such as retrieval-based methods, external memory, etc. </li>
-                    <li> Long sequence modeling, such as learning multi-scale representations, efficient attention mechanisms, etc.</li>
-                    <li> Graph representation learning, especially those with evolving graph structures.</li>
+                    <li> New neural network architectures beyond decoder-only Transformers, such as learning multi-scale representations, external memory, etc. </li>
+                    <li> New pretraining tasks beyond next-token-prediction, such as retriever immitation, next-context-prediction, etc. </li>
+                    <li> Long sequence modeling and efficient models, such as efficient attention mechanisms, KV compression, etc.</li>
                     <!-- 在这里新建一条新的news，格式如下 -->
                     <!-- <li>新内容</li> -->
                 </ul>
@@ -178,6 +178,12 @@
                     News
                 </h3>
                 <ul class="row">
+                    <li> Dec 2025: Our LUMIA lab members are going to present our Memory Decoder (<a href="https://arxiv.org/abs/2508.09874">https://arxiv.org/abs/2508.09874</a>) in NeurIPS! An external memory to LLM that allows you to plug-and-play domain knowledge! </li>
+                    <li> Nov. 2025: I am serving as the organization chair of <a href="https://mlnlp.org/mlnlp2025/">MLNLP 2025</a>.  </li>
+                    <li> Nov. 2025: I gave a talk at NYU Shanghai: "New Architectures for LLMs: Preliminary Explorations and Insights" (in English).  </li>
+                    <li> Nov. 2025: I am organizing the workshop on "Efficient LLM architectures" in <a href="http://lmg.cipsc.org.cn/conference/lmg2025/subForum/subForum4/index.html">LMG 2025</a>. </li>
+                    <li> Aug. 2025: I am serving as the workshop chair for <a href="http://cips-cl.org/static/CCL2025/cclCommittee/comChairs/index.html">CCL 2025</a>. </li>
+                    <li> Aug. 2025: I gave an invited keynote talk on <a href="https://c2sml.cn/conference.html">CSML 2025</a>, "New Architectures for LLMs: Preliminary Explorations and Insights" (in Chinese).  </li>
                     <li> Dec. 2024: I gave two talks on <a href="http://lmg.cipsc.org.cn/conference/cips-lmg2024/index.html">CIPS-LMG 2024</a>. The slides can be found <a href="assets/HuRef LMG演讲.pdf">here</a> (our NeurIPS work on human-readable fingerprint) and <a href="assets/LMG讲习班-1.5h.pdf">here</a> (the efficient LLM tutorial). </li>
                     <li> Sep. 2024: Our human-readable LLM fingerprint (<a href="https://arxiv.org/abs/2312.04828">[1]</a>) and Cluster-wise Graph Transformer <a href="https://openreview.net/pdf?id=3j2nasmKkP">[2]</a>) got accepted at NeurIPS 2024, with [2] being spotlight! </li>
                     <li> Sep. 2024: Four papers (<a href="https://openreview.net/pdf?id=KpR53ZqtQ6">[1]</a><a href="https://openreview.net/pdf?id=T7fzvcq7Mf">[2]</a><a href="https://openreview.net/pdf?id=uJB6HtUAHX">[3]</a><a href="https://openreview.net/pdf?id=2shnXVWH6c">[4]</a>) are accepted
