--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
                     Research
                 </h3>
                 <p>
-                    My core research interest is <span style="font-weight: 500;">to explore and develop machine intelligence capable of acquiring, forming, reasoning, and interacting with abstract concepts</span> from large amounts of data，
+                    My core research interest is <span style="font-weight: 500;">to explore and develop machine intelligence capable of acquiring, forming, reasoning, and interacting with abstract concepts</span> from large amounts of data,
                     especially through self-supervised learning. 
                     Almost all of my research efforts are centered around this goal, touching on a diverse range of topics such as attention mechanisms, language modeling, dialog systems, automated summarization, grammar induction, 
                     graph neural networks, code generation, etc. A list of topics that I am interested in at the moment are:
@@ -212,8 +212,11 @@
                     Selected Publications
                 </h3>
                 <p>
-                    <span style="font-weight: 500;">This is a selected list of my publications. For an up-to-date, complete list, please refer to 
-                        <a href="https://scholar.google.com/citations?user=LNZ4efwAAAAJ&hl=en">my Google Scholar page</a>. </span>
+                    <span style="font-weight: 500;">This is a selected list of my publications. </span>
+                </p>
+                <p>
+                    <span style="font-weight: 500;">For an up-to-date, complete list, please refer to 
+                    <a href="https://scholar.google.com/citations?user=LNZ4efwAAAAJ&hl=en">my Google Scholar page</a>. </span>
                 </p>
                 <p>
                     <span style="font-weight: 500;">(*) indicates equal contribution. (#) indicates the corresponding author. </span>
@@ -233,7 +236,7 @@
                                 Jiaqi Cao*, Jiarui Wang*, Rubin Wei, Qipeng Guo, Kai Chen, Bowen Zhou, <span style="font-weight: 500;">Zhouhan Lin#</span>
                             </p>
                             <div class="link-list">
-                                <span>NeurIPS 2025 (Poster) </span>
+                                <span>NeurIPS 2025 </span>
                                 <span> | </span>
                                 <a href="https://www.arxiv.org/pdf/2508.09874"><span>pdf</span></a>
                                 <span> | </span>
@@ -263,7 +266,7 @@
                                 Yifan Liu, Yu Fang, <span style="font-weight: 500;">Zhouhan Lin#</span>
                             </p>
                             <div class="link-list">
-                                <span>ACM MultiMedia 25 </span>
+                                <span>ACM MultiMedia 2025 </span>
                                 <span> | </span>
                                 <a href="https://www.arxiv.org/pdf/2507.00498"><span>pdf</span></a>
                                 <span> | </span>
@@ -288,7 +291,7 @@
                                 Chang Su, Dengliang Shi, Siyuan Huang, Jintao Du, Changhua Meng, Yu Cheng, Weiqiang Wang, <span style="font-weight: 500;">Zhouhan Lin#</span>
                             </p>
                             <div class="link-list">
-                                <span>EMNLP 2025 (Main Conference) </span>
+                                <span>EMNLP 2025 </span>
                                 <span> | </span>
                                 <a href="https://aclanthology.org/2025.emnlp-main.216.pdf"><span>pdf</span></a>
                                 <span> | </span>
@@ -332,7 +335,7 @@
                                 Siyuan Huang, Yunchong Song, Jiayue Zhou, <span style="font-weight: 500;">Zhouhan Lin#</span>
                             </p>
                             <div class="link-list">
-                                <span>NeurIPS 2024 Spotlight </span>
+                                <span>NeurIPS 2024 (Spotlight) </span>
                                 <span> | </span>
                                 <a href="https://arxiv.org/abs/2410.06746"><span>arXiv:2410.06746</span></a>
                                 <span> | </span>
