add huref 	new file:   assets/research/huref.png 	modified:   index.html

--- a/index.html
+++ b/index.html
@@ -453,6 +453,28 @@
                     <!-- research 1 -->
                     <div class="row">
                         <div class="col-xs-12 col-sm-4">
+                            <img width="100%" src="./assets/research/huref.png" alt="" srcset="">
+                        </div>
+                        <div class="col-xs-12 col-sm-8">
+                            <h4>
+                                HuRef: HUman-REadable Fingerprint for Large Language Models
+                            </h4>
+                            <p class="author">
+                                Boyi Zeng, Lizheng Wang, Yuncong Hu, Yi Xu, Chenghu Zhou, Xinbing Wang, Yu Yu, <span style="font-weight: 500;">Zhouhan Lin#</span>
+                            </p>
+                            <div class="link-list">
+                                <span>NeurIPS 2024 (Poster) </span>
+                                <span> | </span>
+                                <a href="https://arxiv.org/abs/2312.04828"><span>pdf</span></a>
+                                <span> | </span>
+                                <a href="https://github.com/LUMIA-Group/HuRef"><span>codes</span></a>
+                            </div>
+                            <abstract>
+                                We introduce HuRef, a human-readable fingerprint designed to protect LLM copyright by identifying a model's original base version. Our study finds that while parameter vector directions remain stable after pretraining (persisting through SFT and RLHF), they are vulnerable to rotation or permutation attacks. To address this, we derive three invariant terms based on the Transformer structure. To prevent information leakage, these terms are mapped to a Gaussian vector and converted into a natural image via StyleGAN2. Finally, we utilize Zero-Knowledge Proofs (ZKP) to verify the authenticity of the generated fingerprint without exposing private model parameters, providing a secure and effective method for ownership verification.                    </div>
+
+                    <!-- research 1 -->
+                    <div class="row">
+                        <div class="col-xs-12 col-sm-4">
                             <img width="100%" src="./assets/research/rasat.png" alt="" srcset="">
                         </div>
                         <div class="col-xs-12 col-sm-8">
