delete_abs_add_blog_link

--- a/index.html
+++ b/index.html
@@ -468,10 +468,9 @@
                                 <a href="https://arxiv.org/abs/2312.04828"><span>pdf</span></a>
                                 <span> | </span>
                                 <a href="https://github.com/LUMIA-Group/HuRef"><span>codes</span></a>
+                                <span> | </span>
+                                <a href="https://mp.weixin.qq.com/s/wy2HKsG-HRk8p6pe5pW87A"><span>blog</span></a>
                             </div>
-                            <abstract>
-                                We introduce HuRef, a human-readable fingerprint designed to protect LLM copyright by identifying a model's original base version. Our study finds that while parameter vector directions remain stable after pretraining (persisting through SFT and RLHF), they are vulnerable to rotation or permutation attacks. To address this, we derive three invariant terms based on the Transformer structure. To prevent information leakage, these terms are mapped to a Gaussian vector and converted into a natural image via StyleGAN2. Finally, we utilize Zero-Knowledge Proofs (ZKP) to verify the authenticity of the generated fingerprint without exposing private model parameters, providing a secure and effective method for ownership verification.                    </div>
-
                     <!-- research 1 -->
                     <div class="row">
                         <div class="col-xs-12 col-sm-4">
