--- a/index.html
+++ b/index.html
@@ -345,7 +345,7 @@
 
                     <div class="row">
                         <div class="col-xs-12 col-sm-4">
-                            <img width="100%" src="./assets/research/reranker.png" alt="Diagram showing the Gumbel Reranking process with a differentiable attention mask over candidate documents." srcset="">
+                            <img width="100%" src="./assets/research/reranker.png" alt="" srcset="">
                         </div>
                         <div class="col-xs-12 col-sm-8">
                             <h4>
@@ -357,9 +357,7 @@
                             <div class="link-list">
                                 <span>ACL 2025 (Main Conference) </span>
                                 <span> | </span>
-                                <a href="https://arxiv.org/abs/2502.11116"><span>arXiv:2502.11116</span></a>
-                                <span> | </span>
-                                <a href="https://aclanthology.org/2025.acl-long.354/"><span>Conference Link (ACL Anthology)</span></a>
+                                <a href="https://arxiv.org/abs/2502.11116"><span>pdf</span></a>
                                 <span> | </span>
                                 <a href="https://github.com/LUMIA-Group/Gumbel-Reranking"><span>codes</span></a>
                             </div>
@@ -368,7 +366,7 @@
 
                     <div class="row">
                         <div class="col-xs-12 col-sm-4">
-                            <img width="100%" src="./assets/research/cluster_gt.png" alt="Diagram illustrating the Cluster-wise Graph Transformer architecture with Node-to-Cluster Attention." srcset="">
+                            <img width="100%" src="./assets/research/cluster_gt.png" alt="" srcset="">
                         </div>
                         <div class="col-xs-12 col-sm-8">
                             <h4>
@@ -380,9 +378,7 @@
                             <div class="link-list">
                                 <span>NeurIPS 2024 (Spotlight) </span>
                                 <span> | </span>
-                                <a href="https://arxiv.org/abs/2410.06746"><span>arXiv:2410.06746</span></a>
-                                <span> | </span>
-                                <span>Conference Link (NeurIPS 2024) - Please check the <a href="https://arxiv.org/abs/2410.06746"><span>arXiv page</span></a> for the official publication details.</span>
+                                <a href="https://arxiv.org/abs/2410.06746"><span>pdf</span></a>
                                 <span> | </span>
                                 <a href="https://github.com/LUMIA-Group/Cluster-wise-Graph-Transformer"><span>codes</span></a>
                             </div>
@@ -391,7 +387,7 @@
 
                     <div class="row">
                         <div class="col-xs-12 col-sm-4">
-                            <img width="100%" src="./assets/research/subtree_attn.png" alt="Diagram showing the Subtree Attention mechanism for Graph Neural Networks." srcset="">
+                            <img width="100%" src="./assets/research/subtree_attn.png" alt="" srcset="">
                         </div>
                         <div class="col-xs-12 col-sm-8">
                             <h4>
@@ -403,9 +399,7 @@
                             <div class="link-list">
                                 <span>NeurIPS 2023 </span>
                                 <span> | </span>
-                                <a href="https://arxiv.org/abs/2310.05296"><span>arXiv:2310.05296</span></a>
-                                <span> | </span>
-                                <a href="https://openreview.net/forum?id=t2hEZadBBk"><span>Conference Link (OpenReview)</span></a>
+                                <a href="https://arxiv.org/abs/2310.05296"><span>pdf</span></a>
                                 <span> | </span>
                                 <a href="https://github.com/LUMIA-Group/SubTree-Attention"><span>codes</span></a>
                             </div>
