--- a/index.html
+++ b/index.html
@@ -338,14 +338,14 @@
                                 <span> | </span>
                                 <a href="https://arxiv.org/abs/2502.13943"><span>pdf</span></a>
                                 <span> | </span>
-                                <a href="https://github.com/Lux0926/ASPRM"><span>code</span></a>
+                                <a href="https://github.com/Lux0926/ASPRM"><span>codes</span></a>
                                 <span> | </span>
                                 <a href="https://zhuanlan.zhihu.com/p/27303531524"><span>Zhihu(知乎)</span></a>
                                 <span> | </span>
                                 <a href="https://www.bilibili.com/video/BV1EutEzTEgR/?share_source=copy_web&vd_source=4b4b2a58784294287ab1b1036e0dd3aa"><span>bilibili</span></a>
+                                <span> | </span>
+                                <a href="https://mp.weixin.qq.com/s/LNZvhAFGJkZ_J2MHWmIz2w"><span>微软亚洲研究院</span></a>
                             </div>
-                            <abstract>
-                                Current approaches for training Process Reward Models (PRMs) often involve deconposing responses into multiple reasoning steps using rule-based techniques, such as using predefined placeholder tokens or setting the reasoning step’s length to a fixed size. These approaches overlook the fact that certain words don’t usually indicate true decision points. To address this, we propose AdaptiveStep, a method that divides reasoning steps based on the model’s confidence in predicting the next word, offering more information on decision-making at each step, improving downstream tasks like reward model training. Moreover, our method requires no manual annotation. Experiments with AdaptiveStep-trained PRMs in mathematical reasoning and code generation show that the outcome PRM achieves state-of-the-art Best-of-N performance, surpassing greedy search strategy with token-level value-guided decoding, while also reducing construction costs by over 30% compared to existing open-source PRMs. We also provide a thorough analysis and case study on its performance, transferability, and generalization capabilities.
                     </div>
 
                     <!-- research 1 -->
